--- a/PythonProject3/index.html
+++ b/PythonProject3/index.html
@@ -9,7 +9,9 @@
 </head>
 <body>
 <div class="survey-container">
-    <img src="mmcl.png" alt="Survey Banner" style="max-width: 100%; height: auto; margin-bottom: 20px;" />
+    <div style="text-align: center;">
+    <img src="mmcl.png" alt="Survey Banner" style="max-width: 60%; height: auto; margin-bottom: 20px;" />
+</div>
   <h2>Professional Code of Ethics Awareness Survey</h2>
 
 
