--- a/PythonProject3/index.html
+++ b/PythonProject3/index.html
@@ -100,7 +100,7 @@
       <p>It’s not that I didn’t care about you. I cared a lot. That’s why I got scared and didn’t know what to do.</p>
       <p>I also want you to know how much you’ve grown—not just in appearance, but in the way your presence still carries that same warmth, that same sincerity, that same lovable energy that once caught my attention and never really let it go.</p>
       <p>And yes, after all this time, I’m still into you. Just like a white tulip standing out in a garden of roses, you’ve always been that quiet, graceful presence I couldn’t forget. I’ve tried looking at these kinds of personalities in others, but I can’t. Maybe in some time I can find one.</p>
-      <p>This website was made for no other reason than to say I’m sorry, and to finally express these feelings. I’m not expecting anything in return—not a reply, not a gesture, not even forgiveness. I just wanted you to know.</p>
+      <p>This website was made for no other reason than to say I’m sorry. I’m not expecting anything in return—not a reply, not a gesture, not even forgiveness. I just wanted you to know.</p>
       <button onclick="alert('You may now close this site.')">Thank you for reading</button>
     </div>
 
