--- a/PythonProject3/index.html
+++ b/PythonProject3/index.html
@@ -93,7 +93,7 @@
 
     <!-- Text Message -->
     <div id="textMessage" class="text-message-box hidden">
-      <h1>To Nikka</h1>
+      <h1>To Nikka Yssabel Bernesto Gestalao</h1>
       <p>The survey you just answered was actually a misdirection—meant to hide the true purpose of this website.</p>
       <p>My apologies if it took too long to reach you. I had planned to send this in mid-April, but something unexpected happened. Back in December 2024, I decided to finally send you an apology. Eventually, I realized I wanted to express it through something more meaningful—so I built this website. I carefully planned how this part would look and had to teach myself how to use Python, since we mostly use JavaScript. I built it little by little while juggling academic responsibilities. There was even a time I dreamt someone slapped me hard enough to wake me up—and when I did, this project came rushing back to my mind.</p>
       <p>I want to express my sincere apologies for how I’ve acted in the past—for the times I ignored you when our paths crossed, and for the things I may have left unsaid. It was never because you didn’t matter. If anything, it was because you always did.</p>
